--- a/_includes/parts/intro-page.html
+++ b/_includes/parts/intro-page.html
@@ -3,7 +3,11 @@
         <img src="/assets/img/{{ page.image }}.jpg" alt="Ilustração do banner sobre {{ page.title }}" />
     </div>
     <div class="intro-page-inner center">
-        <h1 class="intro-page-title">{{ page.title }}</h1>
-        <p class="intro-page-description">{{ page.intro }}</p>
+        {% for top_item in site.links %}
+            {% if page.url == top_item.top_url %}
+            <h1 class="intro-page-title">{{ top_item.top_title }}</h1>
+            <p class="intro-page-description">{{ top_item.intro }}</p>
+            {% endif %}
+        {% endfor %}
     </div>
 </section>
