--- a/_includes/parts/intro-product.html
+++ b/_includes/parts/intro-product.html
@@ -1,6 +1,6 @@
 <section class="intro-page">
     <div class="intro-page-img">
-        <img src="/assets/img/uniformes.jpg" alt="Ilustração do banner sobre o produto {{ page.title }}" />
+        <img src="/assets/img/product.jpg" alt="Ilustração do banner sobre o produto {{ page.title }}" />
     </div>
     <div class="intro-page-inner center">
         <h1 class="intro-page-title">{{ page.title }}</h1>
