--- a/_includes/parts/intro-page.html
+++ b/_includes/parts/intro-page.html
@@ -4,9 +4,18 @@
     </div>
     <div class="intro-page-inner center">
         {% for top_item in site.links %}
-            {% if page.url == top_item.top_url %}
-            <h1 class="intro-page-title">{{ top_item.top_title }}</h1>
-            <p class="intro-page-description">{{ top_item.intro }}</p>
+            {% if top_item.nested %}
+                {% for nested_item in top_item.nested %}
+                    {% if page.url == nested_item.sub_url %}
+                    <h1 class="intro-page-title">{{ nested_item.sub_title }}</h1>
+                    <p class="intro-page-description">{{ nested_item.sub_intro }}</p>
+                    {% endif %}
+                {%  endfor %}
+            {% else %}
+                {% if page.url == top_item.top_url %}
+                    <h1 class="intro-page-title">{{ top_item.top_title }}</h1>
+                    <p class="intro-page-description">{{ top_item.top_intro }}</p>
+                {%  endif %}
             {% endif %}
         {% endfor %}
     </div>
