--- a/_src/styl/globals/___variables.styl
+++ b/_src/styl/globals/___variables.styl
@@ -17,6 +17,9 @@ break-nav = 800px
 nav-height = 64px
 link-hover-color = #2581DC
 
+//intro-page, intro-post e intro-product style
+intro-style = true
+
 break1 = 1000px
 break2 = 750px
 break3 = 500px
