--- a/_src/styl/parts/intro-page.styl
+++ b/_src/styl/parts/intro-page.styl
@@ -9,7 +9,7 @@
             display block
             width 100%
             height 210px
-            object-fit cover
+            object-fit cover    
     .intro-page-inner
         height 210px
         padding 45px 0
@@ -22,3 +22,9 @@
             font-weight: 700
         .intro-page-description
             font-size: 20px
+            
+if intro-style
+    .intro-style
+        @extend .intro-page .intro-page-img img
+        position: absolute
+        background: rgba(colors, .8)
