--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1660,7 +1660,8 @@ h5 {
   width: 100%;
   background: #e85b54;
 }
-.intro-page .intro-page-img img {
+.intro-page .intro-page-img img,
+.intro-style {
   display: block;
   width: 100%;
   height: 210px;
@@ -1683,6 +1684,10 @@ h5 {
 }
 .intro-page .intro-page-inner .intro-page-description {
   font-size: 20px;
+}
+.intro-style {
+  position: absolute;
+  background: rgba(232,91,84,0.8);
 }
 @media only screen and (max-width: 1230px) {
   .intro-page .intro-page-inner {
