--- a/_includes/parts/intro-page.html
+++ b/_includes/parts/intro-page.html
@@ -3,6 +3,7 @@
         <img src="/assets/img/{{ page.image }}.jpg" alt="Ilustração do banner sobre {{ page.title }}" />
     </div>
     <div class="intro-style"></div>
+    <div class="intro-style-2"></div>
     <div class="intro-page-inner center">
         {% for top_item in site.links %}
             {% if top_item.nested %}
