--- a/_src/styl/globals/header.styl
+++ b/_src/styl/globals/header.styl
@@ -26,7 +26,6 @@
             ul.nav-list>li:last-child a, ul.nav-list>li:last-child a:visited
                 background-color colorp
                 color white
-                font-weight: bold
                 &:hover
                     background-color lighten(colorp,20%)
                     color white
@@ -52,7 +51,7 @@
                             padding-left 4px
                             content ' \25bc'
                     ul.nav-dropdown
-                        background: colors
+                        background: colorp
                         list-style: none
                         position: absolute
                         display none
