--- a/_src/styl/style.styl
+++ b/_src/styl/style.styl
@@ -12,29 +12,29 @@
 @import "/globals/_home-mob"
 @import "/globals/_header-mob"
 @import "/globals/_footer-mob"
-@import "/globals/page-adicional"
-@import "/globals/_page-adicional-mob"
-@import "/globals/page-area"
-@import "/globals/_page-area-mob"
-@import "/globals/page-info"
-@import "/globals/_page-info-mob"
-@import "/globals/page-info2"
-@import "/globals/_page-info2-mob"
-@import "/globals/page-produtos"
-@import "/globals/_page-produtos-mob"
-@import "/globals/page-destaques"
-@import "/globals/page-oferta"
-@import "/globals/_page-oferta-mob"
-@import "/globals/page-404"
-@import "/globals/page-blog"
-@import "/globals/_page-blog-mob"
-@import "/globals/page-contato"
-@import "/globals/_page-contato-mob"
-@import "/globals/page-sobre"
-@import "/globals/_page-sobre-mob"
-@import "/globals/page"
-@import "/globals/_page-mob"
-@import "/modals/_modal"
+@import "/pages/page-adicional"
+@import "/pages/_page-adicional-mob"
+@import "/pages/page-area"
+@import "/pages/_page-area-mob"
+@import "/pages/page-info"
+@import "/pages/_page-info-mob"
+@import "/pages/page-info2"
+@import "/pages/_page-info2-mob"
+@import "/pages/page-produtos"
+@import "/pages/_page-produtos-mob"
+@import "/pages/page-destaques"
+@import "/pages/page-oferta"
+@import "/pages/_page-oferta-mob"
+@import "/pages/page-404"
+@import "/pages/page-blog"
+@import "/pages/_page-blog-mob"
+@import "/pages/page-contato"
+@import "/pages/_page-contato-mob"
+@import "/pages/page-sobre"
+@import "/pages/_page-sobre-mob"
+@import "/pages/page"
+@import "/pages/_page-mob"
+@import "/parts/_modal"
 @import "/parts/share"
 @import "/parts/intro-home"
 @import "/parts/_intro-home-mob"
