--- a/_src/styl/pages/page.styl
+++ b/_src/styl/pages/page.styl
@@ -11,7 +11,7 @@
                     lost-column 10/14 2
                     overflow: hidden
                     background: white
-                    padding: 40px 20px 20px 50px
+                    padding: 30px 20px 20px 50px
                     box-shadow 0 0 1px 0 rgba(colors, .5)
                     margin-bottom 20px
                     .part-header
@@ -25,21 +25,24 @@
                             margin 15px 0
                             i.fa
                                 color colors + 80%
-                        .part-subtitle  
-                            position: relative
-                            display inline-block
-                            height 30px
-                            line-height: 30px
-                            color white
-                            margin 0
-                            background: colorp
-                            padding: 0 8px
-                            z-index 9
                         .part-img
                             position: relative
-                            top -30px
+                            overflow: hidden
                             width 100%
-                            height auto
+                            height 300px
+                            margin-bottom: 15px
+                            img
+                                width 100%
+                                height auto                                
+                            .part-subtitle  
+                                position: absolute
+                                top 0
+                                left 0
+                                color white
+                                margin 0
+                                background: rgba(black, 0.5)
+                                padding: 8px
+                                z-index 9
                     .part-content
                         overflow: hidden
                         background: white
