--- a/_src/styl/globals/header.styl
+++ b/_src/styl/globals/header.styl
@@ -27,7 +27,7 @@
                 background-color colorp
                 color white
                 &:hover
-                    background-color lighten(colorp,20%)
+                    background colorp + 5%
                     color white
             ul.nav-list
                 list-style: none
