--- a/_src/styl/parts/slice-destaque.styl
+++ b/_src/styl/parts/slice-destaque.styl
@@ -8,14 +8,10 @@
             overflow hidden
             border 8px solid cinza;
             background-clip padding-box
-            &:nth-child(1) .destaque-front
+            .destaque-front.destaque-radio
                 background: rgba(#87CDD2, .8)
-            &:nth-child(2) .destaque-front
+            .destaque-front.destaque-fibra
                 background: rgba(#EB5E50, .8)
-            &:nth-child(3) .destaque-front
-                background: rgba(#22AD84, .8)
-            &:nth-child(4) .destaque-front
-                background: rgba(#45798C, .8)
             .destaque-rear
                 position: absolute
                 display block
