--- a/_src/styl/parts/slice-depoimentos.styl
+++ b/_src/styl/parts/slice-depoimentos.styl
@@ -25,6 +25,8 @@
                 lost-column 7/10 2
                 overflow hidden
                 height 120px
+                display flex
+                align-items center
             .depoimento-nome
                 float: right
                 padding: 0 5px
