--- a/_includes/parts/slice-depoimentos.html
+++ b/_includes/parts/slice-depoimentos.html
@@ -7,7 +7,7 @@
             <div class="depoimento">
                 <div class="depoimento-img">
                     <a href="{{ post.link }}" target="_blank">
-                        <img src="/assets/img/{{ post.image }}" alt="Rosto do {{ post.title }}" />
+                        <img src="/assets/img/{{ post.image }}" alt="Rosto de {{ post.title }}" />
                     </a>
                 </div>
                 <div class="depoimento-txt">
