--- a/_src/styl/parts/slice-price-table.styl
+++ b/_src/styl/parts/slice-price-table.styl
@@ -1,8 +1,11 @@
 .slice.price-table
     .price-table-main
+        lost-center 800px
         lost-utility clearfix
+        ul.price:first-child
+            margin-bottom: 20px            
         ul.price
-            lost-column 1/6 6
+            lost-column 1/3 3 
             background: white
             padding 0 0 20px
             border-radius radius
