--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2218,6 +2218,11 @@ h5 {
     height: 190px;
   }
 }
+.slice.price-table .price-table-main {
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
 .slice.price-table .price-table-main:before {
   content: '';
   display: table;
@@ -2227,8 +2232,20 @@ h5 {
   display: table;
   clear: both;
 }
+.slice.price-table .price-table-main:before {
+  content: '';
+  display: table;
+}
+.slice.price-table .price-table-main:after {
+  content: '';
+  display: table;
+  clear: both;
+}
+.slice.price-table .price-table-main ul.price:first-child {
+  margin-bottom: 20px;
+}
 .slice.price-table .price-table-main ul.price {
-  width: calc(99.9% * 1/6 - (20px - 20px * 1/6));
+  width: calc(99.9% * 1/3 - (20px - 20px * 1/3));
   background: #fff;
   padding: 0 0 20px;
   border-radius: 6px;
@@ -2242,11 +2259,11 @@ h5 {
 .slice.price-table .price-table-main ul.price:last-child {
   margin-right: 0;
 }
-.slice.price-table .price-table-main ul.price:nth-child(6n) {
+.slice.price-table .price-table-main ul.price:nth-child(3n) {
   margin-right: 0;
   float: right;
 }
-.slice.price-table .price-table-main ul.price:nth-child(6n + 1) {
+.slice.price-table .price-table-main ul.price:nth-child(3n + 1) {
   clear: both;
 }
 .slice.price-table .price-table-main ul.price li.price-field {
