--- a/_src/styl/parts/intro-page.styl
+++ b/_src/styl/parts/intro-page.styl
@@ -11,7 +11,6 @@
             object-fit cover    
     .intro-page-inner
         height 210px
-        padding 20px
         display flex
         flex-direction column
         justify-content center
@@ -21,17 +20,13 @@
             margin 0
         .intro-page-title
             font-size: 50px
+            line-height: 48px
             font-weight: 700
         .intro-page-description
-            font-size: 20px
+            font-size: 18px
             
 if intro-style
     .intro-style
-        @extend .intro-page .intro-page-img img
-        position: absolute
-        border-left 15px dashed colors
-        border-right 15px dashed colors
-    .intro-style-2
         @extend .intro-page .intro-page-img img
         position: absolute
         background: rgba(colors, .8)
